...
class _ResumeGeneralInfoState extends State<ResumeGeneralInfo> {
  final greyL = grey.withAlpha(30);

  @override
  Widget build(BuildContext context) {
    return SingleChildScrollView(
      key: Key('학력 영역 "추가" 버튼 클릭 S'),
      child: 18.pa(
        child: Column(
          spacing: 18,
          children: [
            _section(
              '프로필',
...
                      Expanded(
                        child: Column(
                          spacing: 8,
                          crossAxisAlignment: .start,
                          children: [
                            SearchField(
                              key: Key('이름 입력 필드에 이름 입력'),
                              label: '이름',
                              color: greyL,
                              h: '',
                            ),

                            '직무'.text(.new().b16.cg),
                            PopupMenuButton(
                              key: Key('직무 드롭다운에서 직무 선택'),
                              onSelected: (value) {
                                setState(() {
                                  resumeModel!.jobRole = value.label;
                                });
                              },
                              color: Colors.white,
...
                        decoration: BoxDecoration(
                          borderRadius: .circular(12),
                          color: greyL,
                          border: .all(color: grey.withAlpha(100), width: 2),
                        ),
                        child: TextField(
                          key: Key('한 줄 소개 입력'),
                          maxLength: 50,
                          onChanged: (value) {
                            setState(() {
                              resumeModel!.oneLineIntro = value;
                            });
                          },
...
                      children: [
                        '학력'.text(.new().b20),

                        Spacer(),

                        TextButton(
                          key: Key('학력 영역 "추가" 버튼 클릭'),
                          style: TextButton.styleFrom(
                            tapTargetSize: .shrinkWrap,
                            padding: .zero,
                            minimumSize: .zero,
                          ),
                          onPressed: () {
...
                decoration: BoxDecoration(
                  borderRadius: .circular(12),
                  color: grey.withAlpha(30),
                  border: .all(color: grey.withAlpha(100), width: 2),
                ),
                child: TextField(
                  key: Key('학교명: 한국대학교'),
                  controller: v1,
                  decoration: InputDecoration(
                    border: .none,
                    hint: '예 : 한국대학교'.text(.new().b16.cg),
                    contentPadding: .symmetric(vertical: 16),
                  ),
...
                decoration: BoxDecoration(
                  borderRadius: .circular(12),
                  color: grey.withAlpha(30),
                  border: .all(color: grey.withAlpha(100), width: 2),
                ),
                child: TextField(
                  key: Key('전공: 컴퓨터공학과'),
                  controller: v2,
                  decoration: InputDecoration(
                    border: .none,
                    hint: '예 : 컴퓨터공학과'.text(.new().b16.cg),
                    contentPadding: .symmetric(vertical: 16),
                  ),
...
              ),
            ],
          ),

          18.ph(
            child: PButton(
              key: Key('학교명 입력 후 "저장" 버튼 클릭'),
              child: ['저장'.text(.new().b16.cw)],
              tap: () {
                if (v1.text.isNotEmpty && v2.text.isNotEmpty) {
                  resumeModel!.educations.add(
                    EducationModel(
                      schoolName: v1.text,
...
