...
                  ),
                ),

                32.sh,

                ElevatedButton(
                  key: Key('"경력 추가" 버튼 클릭'),
                  style: ElevatedButton.styleFrom(
                    shape: RoundedRectangleBorder(
                      borderRadius: .circular(12),
                      side: BorderSide(color: blue),
                    ),
                    padding: .symmetric(vertical: 16),
...
                decoration: BoxDecoration(
                  borderRadius: .circular(12),
                  color: grey.withAlpha(30),
                  border: .all(color: grey.withAlpha(100), width: 2),
                ),
                child: TextField(
                  key: Key('회사명: 테크스타트업'),
                  controller: v1,
                  decoration: InputDecoration(
                    border: .none,
                    hint: '예 : 테크스타트업'.text(.new().b16.cg),
                    contentPadding: .symmetric(vertical: 16),
                  ),
...
                decoration: BoxDecoration(
                  borderRadius: .circular(12),
                  color: grey.withAlpha(30),
                  border: .all(color: grey.withAlpha(100), width: 2),
                ),
                child: TextField(
                  key: Key('직책: 모바일 앱 개발자'),
                  controller: v2,
                  decoration: InputDecoration(
                    border: .none,
                    hint: '예 : 프론트엔드 개발자'.text(.new().b16.cg),
                    contentPadding: .symmetric(vertical: 16),
                  ),
...
              ),
            ],
          ),

          18.ph(
            child: PButton(
              key: Key('회사명, 직책 입력 후 "저장" 버튼 클릭'),
              child: ['저장'.text(.new().b16.cw)],
              tap: () {
                if (v1.text.isNotEmpty && v2.text.isNotEmpty) {
                  resumeModel!.careers.add(
                    CareerModel(
                      companyName: v1.text,
...
